<resources>
	<string name="app_name" translatable="false">Outfit</string>
	<string name="chanel_id_default" translatable="false">chanel_id_default</string>

	<string name="viewshot_hint_add_a_comment">Add a comment</string>
	<string name="tag_person" translatable="false">\@%s</string>
	<string name="tag_hash" translatable="false">\#%1$s</string>
	<string name="tag_brand" translatable="false">\&amp;%1$s</string>
	<string name="tag_product" translatable="false">\&amp;%1$s\u002f%2$s</string>

	<string name="cloud_notification_title_shot_posted">%s posted new shot.</string>
	<string name="cloud_notification_title_shot_include_person_tag">%s tagged you in a shot.</string>
	<string name="cloud_notification_title_shot_liked">%s liked your shot.</string>
	<string name="cloud_notification_title_commented">%s commented.</string>
	<string name="cloud_notification_title_comment_include_person_tag">%s tagged you in a comment.</string>
	<string name="cloud_notification_title_comment_liked">%s liked your comment.</string>
	<string name="cloud_notification_title_followed">%1$s started following you.</string>


	<string name="msg_shot_posted">%s posted new shot.</string>
	<string name="msg_shot_include_person_tag">%s tagged you in a shot.</string>
	<string name="msg_shot_liked">%s liked your shot.</string>
	<string name="msg_commented">%1$s commented: %2$s</string>
	<string name="msg_comment_include_person_tag">%1$s tagged you in a comment: %2$s</string>
	<string name="msg_comment_liked">%1$s liked your comment: %2$s</string>
	<string name="msg_followed">%1$s started following you.</string>

	<!--	<string name="introduce_explore_fragment"></string>-->
	<!--	<string name="introduce_subscriptions_fragment"></string>-->
	<!--	<string name="introduce_notification_fragment"></string>-->
	<string name="introduce_search_fragment"><![CDATA[You can search like this…\n\nText\n@PersonName\n$HashTag\n&Brand\n&Brand/Item]]></string>
	<string name="warning_post_confirm_fragment_post_policy">Photos/caption not related to outfit(OOTD) may be deactivated or deleted</string>

	<string name="change_name_warning">You can only change the name once within 14 days.</string>

	<string name="str_logo_bottom" translatable="false">www.outfit.photos</string>
	<string name="all_no_images_available">No images available.</string>
	<string name="msg_reply_to"><![CDATA[Reply to <b>%s</b>]]></string>
	<string name="all_next">Next</string>
	<string name="str_share">Share</string>
	<string name="str_submit">Submit</string>
	<string name="all_brand" translatable="false">Brand</string>
	<string name="all_product" translatable="false">Product</string>
	<string name="str_remember_me">Remember me</string>
	<string name="str_ok">OK</string>
	<string name="str_or">OR</string>
	<string name="str_hash_tag" translatable="false">HashTag</string>
	<string name="str_closet" translatable="false">Closet</string>
	<string name="str_brand" translatable="false">Brand</string>
	<string name="str_product_optional" translatable="false">Product(Optional)</string>
	<string name="str_post">Post</string>
	<string name="str_shot">Shot</string>
	<string name="str_follower" translatable="false">Follower</string>
	<string name="str_following" translatable="false">Following</string>
	<string name="str_follow">Follow</string>
	<string name="str_unfollow">Unfollow</string>
	<string name="str_d_shot" translatable="false"><![CDATA[<big>%d</big><br/><smal>Shot</smal>]]></string>
	<string name="str_d_follower" translatable="false"><![CDATA[<big>%d</big><br/><smal>Follower</smal>]]></string>
	<string name="str_d_following" translatable="false"><![CDATA[<big>%d</big><br/><smal>Following</smal>]]></string>
	<string name="str_sign_in">Sign In</string>
	<string name="str_sign_Up">Sign Up</string>
	<string name="str_change_password">Change password</string>
	<string name="str_d_liked" translatable="false">%d Liked</string>
	<string name="str_d_comments" translatable="false">%d Comments</string>
	<string name="str_edit_profile">Edit profile</string>
	<string name="str_my_account">My account</string>
	<string name="str_logout">Logout</string>
	<string name="str_delete">Delete</string>
	<string name="str_cancel">Cancel</string>
	<string name="str_remove">Remove</string>
	<string name="str_biography" translatable="false">Biography</string>
	<string name="str_change_profile_photo">Change profile photo</string>
	<string name="str_change_background">Change background</string>
	<string name="str_change_name">Change name</string>
	<string name="str_my_closet">My Closet</string>
	<string name="str_retry">Retry</string>
	<string name="str_restart">Restart</string>
	<string name="str_view_all">View all</string>
	<string name="msg_move_to_closet">Move to closet</string>
	<string name="msg_move_to_private_closet">Move to private closet</string>

	<string name="msg_an_update_has_just_been_downloaded">An update has just been downloaded.</string>
	<string name="msg_delete_this_notification">Delete this notification</string>
	<string name="msg_view_all_comment">View all comment</string>
	<string name="msg_click_to_comment">Click to comment</string>
	<string name="msg_do_not_have_an_account">Don\'t have an account?</string>
	<string name="msg_already_have_account">Already have account?</string>
	<string name="msg_forgot_password">Forgot password?</string>
	<string name="msg_forgot_email">Forgot email?</string>
	<string name="msg_forgot_name">Forgot name?</string>
	<string name="msg_nothing_selected">Nothing selected.</string>
	<string name="msg_click_image_to_add_item_tag">Click image to add Item tag.</string>
	<string name="html_click_image_to_add_item_tag_d"><![CDATA[Click image to add Item tag. <small>(%1$d)</small>]]></string>
	<!--	<string name="msg_tag_your_items">Tag your items</string>-->
	<!--	<string name="html_tag_your_items_d"><![CDATA[Tag your items <small>(%1$d)</small>]]></string>-->
	<string name="msg_write_a_caption">Write a caption</string>
	<string name="msg_deleting">Deleting…</string>
	<!--	<string name="msg_operation_failed_please_try_again_later">Operation failed.\nPlease try again later.</string>-->
	<string name="msg_error_occurred_please_try_again_later">Error occurred.\nPlease try again later.</string>
	<string name="msg_your_session_has_expired_please_login_again">Your session has expired.\nPlease login again.</string>
	<string name="msg_sign_up_complete">Sign up complete.</string>
	<string name="msg_sign_in_with">Sign in with $s</string>
	<string name="msg_sign_in_with_google">Sign in with Google</string>
	<string name="msg_has_been_applied">Has been applied</string>
	<string name="msg_new_profile_photo">New profile photo</string>
	<string name="msg_remove_profile_photo">Remove profile photo</string>
	<string name="msg_new_background">New background</string>
	<string name="msg_remove_background">Remove background</string>
	<string name="msg_search_anything">Search anything</string>
	<string name="msg_comments_on_s_shot">Comments on %s\'s Shot</string>
	<string name="msg_copy_item_tag_to_clipboard">Copy item tag to clipboard</string>
	<string name="msg_search_brand">Search brand</string>
	<string name="msg_search_product">Search product</string>
	<string name="msg_you_can_only_see_your_own_secret_shot">You can only see your own secret shot.</string>
	<string name="msg_no_internet_connection">No internet connection</string>

	<string name="nav_label_confirm">New Shot</string>
	<string name="nav_label_tagging">Tagging Item</string>

	<string name="title_explore">Explore</string>
	<string name="title_bookmarks">Bookmarks</string>
	<string name="title_subscriptions">Subscriptions</string>
	<string name="title_notification">Notification</string>
	<string name="title_shot">Shot</string>
	<string name="title_comments">Comments</string>
	<string name="title_my_account">My Account</string>
	<string name="title_change_password">Change Password</string>
	<string name="title_change_name">Change Name</string>
	<string name="title_upload">Upload</string>
	<string name="title_edit_profile">Edit profile</string>
	<string name="title_reset_password">Reset password</string>

	<string name="dialog_title_delete_following">Confirm delete following</string>
	<string name="dialog_content_delete_following">Are you sure you want to delete this following?</string>
	<string name="dialog_title_delete_shot">Confirm delete shot</string>
	<string name="dialog_content_delete_shot">Are you sure you want to delete this item?</string>
	<string name="dialog_title_delete_comment">Confirm delete comment</string>
	<string name="dialog_content_delete_comment">Are you sure you want to delete this item?</string>
	<string name="dialog_title_delete_notification">Confirm delete notification</string>
	<string name="dialog_content_delete_notification">Are you sure you want to delete this item?</string>

	<string name="error_title_notification_is_empty">You will see a notification here.</string>
	<string name="error_title_subscription_is_empty">Subscription is empty.</string>
	<string name="error_msg_subscription_is_empty">When you follow, you will see a shot of the user you are following.</string>
	<string name="error_title_bookmarks_is_empty">Bookmarks is empty.</string>
	<string name="error_msg_bookmarks_is_empty">Bookmark the shot you want to keep and it will appear here.</string>
	<string name="error_title_no_shots">No shots.</string>
	<string name="error_msg_no_shots">The shot you uploaded are displayed here.</string>
	<string name="error_title_no_private_shots">No private shots</string>
	<string name="error_msg_no_private_shots">Private shots are displayed here\nand can only be viewed by you.</string>

	<!-- Strings related to login -->
	<string name="str_next">Next</string>
	<string name="str_sms" translatable="false">Sms</string>
	<string name="str_email" translatable="false">Email</string>
	<string name="str_phone" translatable="false">Phone</string>
	<string name="str_phone_or_email_or_name" translatable="false">Phone, Email or Name</string>
	<string name="str_verification_code">Verification code</string>
	<string name="str_request_new_code">Request new code</string>
	<string name="msg_enter_the_verification_code_sent_to">Enter the %2$d-length verification code sent to %1$s.</string>
	<string name="str_name">Name</string>
	<string name="str_password">Password</string>
	<string name="str_confirm_password">Confirm Password</string>
	<string name="str_current_password">Current password</string>
	<string name="str_new_password">New password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_up">Sign up</string>
	<string name="permission_read_external_storage">Read external storage permissions are needed for find images.</string>
</resources>
