<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/merge_toolbar" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/my_account_button_my_closet"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_my_closet"
		android:textAlignment="textStart"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_chevron_right"
		app:iconGravity="end" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/my_account_button_bookmarks"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_bookmarks"
		android:textAlignment="textStart"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_chevron_right"
		app:iconGravity="end" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/my_account_button_edit_profile"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_edit_profile"
		android:textAlignment="textStart"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_chevron_right"
		app:iconGravity="end" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/my_account_button_change_password"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_change_password"
		android:textAlignment="textStart"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_chevron_right"
		app:iconGravity="end" />


	<com.google.android.material.button.MaterialButton
		android:id="@+id/my_account_button_logout"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_logout"
		android:textAlignment="textStart"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_chevron_right"
		app:iconGravity="end" />

</LinearLayout>