<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.authentication.signin.SignInFragment">

	<ProgressBar
		android:id="@+id/progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<View
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" />


			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/form"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:orientation="vertical">

				<TextView
					android:id="@+id/tv_logo"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/app_name"
					android:textSize="60sp"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/sign_in_layout_phone_or_email_or_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintTop_toBottomOf="@+id/tv_logo">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/sign_in_edit_phone_or_email_or_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/str_phone_or_email_or_name"
						android:inputType="textEmailAddress"
						android:maxLines="1"
						android:singleLine="true" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/sign_up_layout_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:endIconMode="password_toggle"
					app:layout_constraintTop_toBottomOf="@+id/sign_in_layout_phone_or_email_or_name">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/sign_up_edit_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/str_password"
						android:imeActionId="6"
						android:imeActionLabel="@string/action_sign_in"
						android:imeOptions="actionUnspecified"
						android:inputType="textPassword"
						android:maxLines="1"
						android:singleLine="true" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.button.MaterialButton
					android:id="@+id/btn_forgot_password"
					style="@style/Widget.MaterialComponents.Button.TextButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/msg_forgot_password"
					android:textAllCaps="false"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_password" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/btn_sign_in"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/action_sign_in"
					app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

				<TextView
					android:id="@+id/tv_or"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:text="@string/str_or"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

				<androidx.constraintlayout.helper.widget.Flow
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:constraint_referenced_ids="tv_do_not_have_account,btn_navigate_sign_up"
					app:flow_horizontalGap="8dp"
					app:flow_horizontalStyle="packed"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tv_or" />

				<TextView
					android:id="@+id/tv_do_not_have_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/msg_do_not_have_an_account"
					tools:ignore="MissingConstraints" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/btn_navigate_sign_up"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_sign_Up"
					android:textAllCaps="false"
					tools:ignore="MissingConstraints" />
			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" />

			<TextView
				android:id="@+id/tv_logo_bottom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/str_logo_bottom"
				app:layout_constraintBottom_toBottomOf="parent" />
		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>