<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".ui.authentication.signup.SignUpFragment">

	<ProgressBar
		android:id="@+id/progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/sign_up_layout_to"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				app:layout_constraintTop_toTopOf="parent">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/sign_up_et_to"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/str_email"
					android:maxLines="1"
					android:singleLine="true" />

			</com.google.android.material.textfield.TextInputLayout>


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/sign_up_layout_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:endIconMode="custom"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_to">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/sign_up_et_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/str_name"
					android:inputType="textNoSuggestions"
					android:maxLines="1"
					android:singleLine="true" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/sign_up_layout_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:endIconMode="password_toggle"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_name">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/sign_up_edit_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/str_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign_in"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/sign_up_layout_confirm_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:endIconMode="password_toggle"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_password">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/sign_up_edit_confirm_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/str_confirm_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign_in"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/sign_up_button_sign_up"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/action_sign_up"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_layout_confirm_password" />

			<androidx.constraintlayout.helper.widget.Flow
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:constraint_referenced_ids="sign_up_text_already_have_account,sign_up_button_sign_in"
				app:flow_horizontalGap="8dp"
				app:flow_horizontalStyle="packed"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/sign_up_button_sign_up" />

			<TextView
				android:id="@+id/sign_up_text_already_have_account"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/msg_already_have_account"
				tools:ignore="MissingConstraints" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/sign_up_button_sign_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_sign_in"
				android:textAllCaps="false"
				tools:ignore="MissingConstraints" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>