<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.tabs.TabLayout
				android:id="@+id/sign_up_verification_tabLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent">

				<com.google.android.material.tabs.TabItem
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:tag="@+id/sign_up_verification_tab_sms"
					android:text="@string/str_sms" />

				<com.google.android.material.tabs.TabItem
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:tag="@+id/sign_up_verification_tab_email"
					android:text="@string/str_email" />

			</com.google.android.material.tabs.TabLayout>


			<androidx.constraintlayout.helper.widget.Flow
				android:id="@+id/sign_up_verification_flow_to"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:constraint_referenced_ids="sign_up_verification_spinner_region,sign_up_verification_layout_to"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_verification_tabLayout" />

			<Spinner
				android:id="@+id/sign_up_verification_spinner_region"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:spinnerMode="dialog"
				app:layout_constraintHorizontal_weight="4"
				tools:ignore="MissingConstraints" />


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/sign_up_verification_layout_to"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:hint="@string/str_phone"
				app:layout_constraintHorizontal_weight="6"
				tools:ignore="MissingConstraints">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/sign_up_verification_edit_to"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:inputType="phone"
					android:maxLines="1" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/sign_up_verification_button_next"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:enabled="false"
				android:text="@string/str_next"
				app:layout_constraintTop_toBottomOf="@+id/sign_up_verification_flow_to" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>