<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="kotlin.Unit" />

		<import type="android.view.View" />

		<import type="androidx.lifecycle.LiveData" />

		<import type="com.outfit.client.android.data.NetworkState" />

		<variable
			name="networkState"
			type="LiveData&lt;NetworkState&lt;Unit>>" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<include
			android:id="@+id/merge_toolbar"
			layout="@layout/merge_toolbar"
			app:networkState="@{networkState}" />

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			app:endIconMode="password_toggle">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/edit_current_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/str_current_password"
				android:inputType="textPassword"
				android:textAppearance="@style/TextAppearance.Outfit.Caption" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			app:endIconMode="password_toggle">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/edit_new_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/str_new_password"
				android:inputType="textPassword"
				android:textAppearance="@style/TextAppearance.Outfit.Caption" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			app:endIconMode="password_toggle">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/edit_confirm_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/str_confirm_password"
				android:inputType="textPassword"
				android:textAppearance="@style/TextAppearance.Outfit.Caption" />

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>
</layout>